--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "pforret/estimator",
     "version": "1.1.1",
-    "description": "This is my package Estimator",
+    "description": "Package for number estimation",
     "keywords": [
         "pforret",
         "estimator"
