--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pforret/estimator",
-    "version": "1.3.0",
+    "version": "path",
     "description": "Package for number estimation",
     "keywords": [
         "pforret",
