--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "name": "pforret/estimator",
     "version": "1.4.0",
-    "description": "Package for number estimation",
+    "description": "PHP package to help with statistic estimation (extrapolation) based on historic reference data",
     "keywords": [
         "pforret",
-        "estimator"
+        "estimation",
+        "statistics",
+        "extrapolation"
     ],
     "homepage": "https://github.com/pforret/estimator",
     "license": "MIT",
